Bug 162049 - Quickly walking over new signed messages with + or N crashes with SIGILL
Summary: Quickly walking over new signed messages with + or N crashes with SIGILL
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.9.50
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-13 16:13 UTC by Will Stephenson
Modified: 2008-05-13 18:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Will Stephenson 2008-05-13 16:13:41 UTC
Version:           1.9.50 (using 4.00.73 (KDE 4.0.73 >= 20080507, compiled sources)
Compiler:          gcc
OS:                Linux (i686) release 2.6.25-26-default

Quickly walking over new signed messages with + or N crashes with SIGILL

Reporting for tmcguire to track 4.1 showstoppers.
Comment 1 Thomas McGuire 2008-05-13 18:38:58 UTC
SVN commit 807341 by tmcguire:

Don't crash when quickly switching signed messages.
The problem was that the sub-event loop of KleoJobExecutor would
process user input, which made it possible to switch messages while
the job was being executed. That caused trouble when returning from
the sub-event loop.

Thanks to Volker for the solution.

BUG: 162049


 M  +4 -4      kleojobexecutor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=807341