Don't crash when quickly switching signed messages. The problem was that the sub-event loop of KleoJobExecutor would process user input, which made it possible to switch messages while the job was being executed. That caused trouble when returning from the sub-event loop.

Thanks to Volker for the solution.

BUG: 162049

svn path=/trunk/KDE/kdepim/; revision=807341